# wloc-router

./: .gitattributes
.github/workflows/: wloc-router.yml
wloc-router/: Cargo.toml  README.md
wloc-router/deploy/: config.toml  openwrt-routing.md  wloc-router.init
wloc-router/src/: certs.rs  config.rs  main.rs  server.rs  wloc.rs
